@@ -1,3 +1,9 @@
+2007-11-19  Sanel <karijes@users.sourceforge.net>
+
+	* Replaced dnotify.m4 with notify.m4 where are (now) performed checks for
+	inotify, dnotify and FAM presence
+	* Replaced EDE_ with EDELIB_ in *.m4 and configure.in files
+
 2007-11-13  Sanel <karijes@users.sourceforge.net>
 
 	* Removed old sort() code from list, replacing with new (faster) one
